- fixed some IE layout problems in sitemap

--- a/src-modules/org/opencms/ade/sitemap/client/ui/css/root.css
+++ b/src-modules/org/opencms/ade/sitemap/client/ui/css/root.css
@@ -11,3 +11,11 @@
 	position: relative;
 	margin: 0;
 }
+
+@if user.agent ie6 {
+	.root * {
+		zoom: 1; 
+	}
+}
+
+	
