--- a/src-modules/org/opencms/ade/sitemap/client/ui/css/sitemapItem.css
+++ b/src-modules/org/opencms/ade/sitemap/client/ui/css/sitemapItem.css
@@ -27,12 +27,6 @@
 
 }
 
-@if user.agent ie6 {
-	.sitemapEntryDecoration {
-		margin-top: 25px !important;
-	}
-}
-
 .subSitemapRef {
 	background-image: none;
 	background-color: #ffffcc;
